MY MESSAGE OHH MY GAWD

--- a/src/common/styles/utils.styl
+++ b/src/common/styles/utils.styl
@@ -43,11 +43,11 @@ body {
 }
 
 .text-white {
-  color: white;
+  color:text-primary;
 }
 
 .text-accent {
-  color: #d64933;
+  color:text-accent;
 }
 
 .section {
@@ -67,7 +67,7 @@ body {
 
 .card {
   padding: 2rem;
-  background: white;
+  background: bg-quaternary;
 }
 
 .card-narrow {
@@ -75,7 +75,7 @@ body {
 }
 
 .standard-border {
-  border: 1px solid #58a4b0;
+  border: 1px solid border-primary;
 }
 
 .shadow,
@@ -96,19 +96,19 @@ body {
 
 .fancy-input:focus {
   background: rgba(0, 0, 0, 0);
-  border: 1px solid #58a4b0;
+  border: 1px solid border-primary;
 }
 
 .bg-primary {
-  background-color: #58a4b0;
+  background-color: bg-primary;
 }
 
 .bg-secondary {
-  background-color: #0c7c59;
+  background-color: bg-secondary;
 }
 
 .bg-tertiary {
-  background-color: #bac1b8;
+  background-color: bg-tertiary;
 }
 
 .br-rounded,
@@ -133,13 +133,13 @@ body {
 }
 
 .btn-primary {
-  color: white;
-  background: #58a4b0;
+  color: text-primary;
+  background: bg-primary;
 }
 
 .btn-secondary {
-  background: white;
-  color: #58a4b0;
+  background:bg-quaternary;
+  color: text-secondary;
 }
 
 .d-block {
@@ -165,7 +165,7 @@ body {
 
 .navigation {
   height: 50px;
-  background: #58a4b0;
+  background:bg-primary;
   width: 100%;
   position: fixed;
   top: 0;
@@ -179,7 +179,7 @@ body {
 }
 
 .navigation .navigation-item:hover {
-  color: burlywood;
+  color: hover-color;
 }
 
 .avatar {
@@ -190,11 +190,11 @@ body {
 }
 
 .info {
-  border-bottom: 1px solid #58a4b0;
+  border-bottom: 1px solid border-primary;
   padding: 8px 0;
 }
 
 .info-key {
-  color: #bac1b8;
+  color: bg-tertiary;
   margin-right: 5px;
 }
