MY MESSAGE OHH MY GAWD

--- a/src/common/styles/utils.styl
+++ b/src/common/styles/utils.styl
@@ -75,7 +75,7 @@ body {
 }
 
 .standard-border {
-  border: 1px solid border-primary;
+  border: 1px solid primaryColor;
 }
 
 .shadow,
@@ -96,11 +96,11 @@ body {
 
 .fancy-input:focus {
   background: rgba(0, 0, 0, 0);
-  border: 1px solid border-primary;
+  border: 1px solid primaryColor;
 }
 
 .bg-primary {
-  background-color: bg-primary;
+  background-color: primaryColor;
 }
 
 .bg-secondary {
@@ -134,12 +134,12 @@ body {
 
 .btn-primary {
   color: text-primary;
-  background: bg-primary;
+  background: primaryColor;
 }
 
 .btn-secondary {
   background:bg-quaternary;
-  color: text-secondary;
+  color: primaryColor;
 }
 
 .d-block {
@@ -165,7 +165,7 @@ body {
 
 .navigation {
   height: 50px;
-  background:bg-primary;
+  background: primaryColor;
   width: 100%;
   position: fixed;
   top: 0;
@@ -190,7 +190,7 @@ body {
 }
 
 .info {
-  border-bottom: 1px solid border-primary;
+  border-bottom: 1px solid primaryColor;
   padding: 8px 0;
 }
 
