MY MESSAGE OHH MY GAWD

--- a/src/common/styles/utils.styl
+++ b/src/common/styles/utils.styl
@@ -119,11 +119,15 @@ body {
   border-radius: 8px;
 }
 
+
+.width-button-primary{
+width: 100px
+}
+
 .btn-primary,
 .btn-secondary {
   cursor: pointer
   border: none
-  width: 100px
   height: 36px
   line-height: 36px
   transition: all ease-in-out 300ms
@@ -198,3 +202,7 @@ body {
   color: bg-tertiary;
   margin-right: 5px;
 }
+
+.wrap {
+ flex-wrap: wrap
+ }
