MY MESSAGE OHH MY GAWD

--- a/src/common/styles/utils.styl
+++ b/src/common/styles/utils.styl
@@ -61,7 +61,7 @@ body {
 
 .container {
   margin: auto;
-  max-width: 800px;
+  max-width: 1000px;
   height: 100%;
 }
 
@@ -70,12 +70,17 @@ body {
   background: bg-quaternary;
 }
 
+.card2 {
+  padding: 2rem;
+  background: bg-tertiary;
+}
+
 .card-narrow {
   width: 200px;
 }
 
 .standard-border {
-  border: 1px solid primaryColor;
+  border: 1px solid test-color;
 }
 
 .shadow,
@@ -186,7 +191,9 @@ width: 100px
   color: hover-color;
 }
 
+
 .avatar {
+
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -206,3 +213,48 @@ width: 100px
 .wrap {
  flex-wrap: wrap
  }
+
+ .margin {
+   margin: 20px;
+   }
+
+
+.colorRed {
+  color: red;
+}
+
+
+.colorBlue {
+  color: blue;
+}
+
+.colorOrange {
+  color: orange;
+}
+
+
+
+
+.testText {
+  font-family: Arial Black;
+  font-size: 20px;
+  }
+
+
+  .shedul {
+
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-color:blue;
+}
+
+.shedulTwo {
+
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-color:orange;
+}
